--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://res.cloudinary.com/urmarket-online/image/upload/v1631100881/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="description" content="Выбирайте лучшие микрозаймы онлайн на сайте UrMarket.online! Сравнить 40 предложения в более чем 10 МФО и мгновенно получить займы со ставкой от 0% в день. Моментальный перевод денег на карту.">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="UrMarket.online">
+    <meta property="og:title" content="Cрочно взять микрозайм на банковскую карту онлайн | UrMarket.online">
+    <meta name="keywords" content="рейтинг мфо,список мфо,срочный заём,рейтинг мфо украины,банки украины,центральный банк,рейтинг банков,банки">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/urmarket-online/image/upload/v1631100881/favicon.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <title>UrMarket.online</title>
   </head>
   <body>
