--- a/public/index.html
+++ b/public/index.html
@@ -19,51 +19,51 @@
     <title>UrMarket.online</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198885468-1">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'AW-752745493');
-      gtag('config', 'UA-198885468-1');
-    </script>
-    <!-- Event snippet for Исходящий клик conversion page
-    In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-    <script>
-      function gtag_report_conversion(url) {
-        var callback = function () {
-          console.log('Event send');
-        };
-        gtag('event', 'conversion', {
-          'send_to': 'AW-752745493/cmYsCNjYg_UCEJX49-YC',
-          'event_callback': callback
-        });
-        return false;
-      }
-    </script>
+<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198885468-1">-->
+<!--    </script>-->
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+<!--    <script>-->
+<!--      window.dataLayer = window.dataLayer || [];-->
+<!--      function gtag(){dataLayer.push(arguments);}-->
+<!--      gtag('js', new Date());-->
+<!--      gtag('config', 'AW-752745493');-->
+<!--      gtag('config', 'UA-198885468-1');-->
+<!--    </script>-->
+<!--    &lt;!&ndash; Event snippet for Исходящий клик conversion page-->
+<!--    In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. &ndash;&gt;-->
+<!--    <script>-->
+<!--      function gtag_report_conversion(url) {-->
+<!--        var callback = function () {-->
+<!--          console.log('Event send');-->
+<!--        };-->
+<!--        gtag('event', 'conversion', {-->
+<!--          'send_to': 'AW-752745493/cmYsCNjYg_UCEJX49-YC',-->
+<!--          'event_callback': callback-->
+<!--        });-->
+<!--        return false;-->
+<!--      }-->
+<!--    </script>-->
 
 
 
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+<!--    &lt;!&ndash; Yandex.Metrika counter &ndash;&gt;-->
+<!--    <script type="text/javascript" >-->
+<!--      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};-->
+<!--        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})-->
+<!--      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");-->
 
-      ym(80438245, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-      });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/80438245" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
-    <!-- Yandex.RTB -->
-    <script>window.yaContextCb=window.yaContextCb||[]</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+<!--      ym(80438245, "init", {-->
+<!--        clickmap:true,-->
+<!--        trackLinks:true,-->
+<!--        accurateTrackBounce:true,-->
+<!--        webvisor:true-->
+<!--      });-->
+<!--    </script>-->
+<!--    <noscript><div><img src="https://mc.yandex.ru/watch/80438245" style="position:absolute; left:-9999px;" alt="" /></div></noscript>-->
+<!--    &lt;!&ndash; /Yandex.Metrika counter &ndash;&gt;-->
+<!--    &lt;!&ndash; Yandex.RTB &ndash;&gt;-->
+<!--    <script>window.yaContextCb=window.yaContextCb||[]</script>-->
+<!--    <script src="https://yandex.ru/ads/system/context.js" async></script>-->
   </head>
   <body>
     <noscript>Необходимо включить JavaScript для работы этого сайта.</noscript>
