--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
     <!-- /Yandex.Metrika counter -->
     <!-- Yandex.RTB -->
     <script>window.yaContextCb=window.yaContextCb||[]</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
 
     <!-- Facebook Pixel Code -->
     <script>
@@ -82,7 +83,7 @@
     /></noscript>
     <!-- End Facebook Pixel Code -->
 
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?169",t.onload=function(){VK.Retargeting.Init("VK-RTRG-1090227-4lN9u"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1090227-4lN9u" style="position:fixed; left:-999px;" alt=""/></noscript>
 
   </head>
   <body>
