Updated color schema

--- a/public/index.html
+++ b/public/index.html
@@ -18,19 +18,19 @@
 
     <title>UrMarket.online</title>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198885468-1">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'AW-752745493');
-      gtag('config', 'UA-198885468-1');
-    </script>
-    <!-- Event snippet for Исходящий клик conversion page
-    In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<!--    &lt;!&ndash; Global site tag (gtag.js) - Google Analytics &ndash;&gt;-->
+<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-198885468-1">-->
+<!--    </script>-->
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+<!--    <script>-->
+<!--      window.dataLayer = window.dataLayer || [];-->
+<!--      function gtag(){dataLayer.push(arguments);}-->
+<!--      gtag('js', new Date());-->
+<!--      gtag('config', 'AW-752745493');-->
+<!--      gtag('config', 'UA-198885468-1');-->
+<!--    </script>-->
+<!--    &lt;!&ndash; Event snippet for Исходящий клик conversion page-->
+<!--    In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. &ndash;&gt;-->
     <script>
       function gtag_report_conversion(url) {
         var callback = function () {
