Added credit card detail page

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://res.cloudinary.com/urmarket-online/image/upload/v1631100881/favicon.png" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Выбирайте лучшие микрозаймы онлайн на сайте UrMarket.online! Сравнить 40 предложения в более чем 10 МФО и мгновенно получить займы со ставкой от 0% в день. Моментальный перевод денег на карту.">
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Cрочно взять микрозайм на банковскую карту онлайн | UrMarket.online">
     <meta name="keywords" content="рейтинг мфо,список мфо,срочный заём,рейтинг мфо украины,банки украины,центральный банк,рейтинг банков,банки">
 
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/urmarket-online/image/upload/v1631100881/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
